src/Services/travelServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erp-travel
  labels:
    app.kubernetes.io/part-of: erp-travel-services
